--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -38,7 +38,7 @@ scopes = {
 	"last_search.45C55C1A" = "equipment data"
 	"OpenInspectorPreview.45C55C1A" = "0"
 	"currentGroup.45C55C1A" = "asset"
-	"picker_window_position_offset.075BCD15" = "-311;-42;1261;550"
+	"picker_window_position_offset.075BCD15" = "-361;-42;1261;550"
 	"picker_visibility_flags.075BCD15" = "264"
 	"picker_item_size.075BCD15" = "32"
 	"picker_inspector.075BCD15" = "0"
@@ -134,6 +134,11 @@ providers = {
 objectSelectors = {
 }
 recentSearches = [
+	"st: new entry 57"
+	"st: why they"
+	"st: thats why"
+	"return to quest"
+	"Regressar"
 	"st: slepbone"
 	"st: cecily "
 	"st: slepbone beach"
@@ -149,11 +154,6 @@ recentSearches = [
 	"st: veilglade bo"
 	"st: veilglade penins"
 	"Related Cha"
-	"Objectives"
-	"Cha"
-	"Ver Persona"
-	"return to quest"
-	"Return to quest l"
 ]
 searchItemFavorites = [
 	"GlobalObjectId_V1-1-17b799bcd60e3ba4ea12a3459b3a664c-102900000-0"
