Working through the epilogue with better boss fights

--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -134,6 +134,7 @@ providers = {
 objectSelectors = {
 }
 recentSearches = [
+	"st: kairo"
 	"st: new entry 57"
 	"st: why they"
 	"st: thats why"
@@ -153,7 +154,6 @@ recentSearches = [
 	"st: bear cavernb "
 	"st: veilglade bo"
 	"st: veilglade penins"
-	"Related Cha"
 ]
 searchItemFavorites = [
 	"GlobalObjectId_V1-1-17b799bcd60e3ba4ea12a3459b3a664c-102900000-0"
